# crag

./: .editorconfig  .gitattributes  .gitignore  .rules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  package.json
.claude/: ci-playbook.md  governance.md  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
assets/: demo.cast  demo.tape  poster-demo.cast  poster-git-status.cast  poster-hook.cast  poster-sprawl.cast  record-demo-win.js  record-demo.sh  record-poster-new.js  record-vscode-audit.js  record-vscode-compile.js  record-vscode-hero.js  vscode-audit.cast  vscode-compile.cast  vscode-hero.cast
benchmarks/: cloud-leaderboard.json  leaderboard.json  leaderboard.md  phase1-benchmark.md  repos-100.txt  repos3.txt  results.md  run-benchmark3.js  run-leaderboard.js  stress-test.md
docs/: ARCHITECTURE.md  ci-systems.md  claude-code.md  commands.md  compile-targets.md  distill.md  governance-format.md  index.md  languages.md  mcp.md  release-pipeline.md  workspaces.md
scripts/: bump-version.js  fix-pr.sh  pr-targets.txt  sync-skill-hashes.js
src/: cli-args.js  cli-errors.js  cli.js  colors.js  crag-agent.md  scaffold-agent.md
test/: all.js  analyze-accuracy.test.js  analyze-ci-extractors.test.js  analyze-doc-mining.test.js  analyze-gates.test.js  analyze-normalize.test.js  analyze-project-mining.test.js  analyze-stacks.test.js  analyze-task-runners.test.js  analyze.test.js  (+44 more)
test/fixtures/accuracy/fastapi/: expected.json  pyproject.toml
test/fixtures/accuracy/fastapi/.github/workflows/: test.yml
(+150 files in other folders)
