[project]
name = "fastapi"
version = "0.115.0"
description = "FastAPI framework, high performance, easy to learn, fast to code, ready for production"

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 99
